--- a/package.json
+++ b/package.json
@@ -3,5 +3,5 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": { "start": "node server.js" },
-  "dependencies": { "simple-socks": "^0.2.8" }
+  "dependencies": { "socks": "^2.7.1" }
 }
