--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": { "start": "node server.js" },
-  "dependencies": { "socks": "^2.7.1" }
+  "dependencies": {
+    "axios":  "^1.6.0",
+    "express": "^4.18.2"
+  }
 }
